--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     </textarea>
                 </div>
                 <div class="col-12">
-                    <button id="btn" class="btn btn-info" type="submit">Submit </button>
+                    <button id="btn" class="btn btn-info" type="submit">Enviar</button>
                 </div>
             </form>
         </section>
