--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#quienessomos">Quienes somos</a>
@@ -50,6 +50,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#contacto">Contacto</a>
                         </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -57,7 +58,7 @@
         </div>
     </header>
     <!--Carousel-->
-    <main>
+    <main data-bs-spy="scroll" data-bs-target="#navHome" class="scrollspy-example" tabindex="0">
         <section class="section-carousel" id="seccion-carousel">
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -68,7 +69,7 @@
                         <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="...">
+                        <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
