--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav id="navHome" class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="/assets/img/viajes.svg" width="30" height="30">
+                    <img src="assets/img/viajes.svg" width="30" height="30">
                     VIAJES CHILE</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item d-none d-md-block">
                             <a class="nav-link" href="#quienessomos">Quienes somos</a>
                         </li>
                         <li class="nav-item">
@@ -205,7 +205,7 @@
             </div>
         </section>
         <!-- Contacto -->
-        <section id="contacto" class="container d-none d-md-block mt-n5 mt-lg-0 mb-5">
+        <section id="contacto" class="contacto container  mt-n5 mt-lg-0 mb-5">
             <form>
                 <div class="subtitle text-center mt-5">
                     <h2 class="d-inline-block">CONTACTO</h2>
